--- a/uimdel/src/main/res/layout/view_rang_layout.xml
+++ b/uimdel/src/main/res/layout/view_rang_layout.xml
@@ -11,6 +11,7 @@
         android:layout_width="@dimen/rang_with"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/rang_middle_top"
+        android:backgroundTint="@color/storage_pie_mask"
         android:layout_marginBottom="@dimen/rang_bottom_height"
         tools:background="@drawable/strorage_column_m_0"/>
 
@@ -18,12 +19,14 @@
         android:id="@+id/top"
         android:layout_width="@dimen/rang_with"
         android:layout_height="@dimen/rang_top_height"
+        android:backgroundTint="@color/storage_pie_mask"
         tools:src="@drawable/strorage_column_t_0"/>
 
     <ImageView
         android:id="@+id/bottom"
         android:layout_width="@dimen/rang_with"
         android:layout_height="@dimen/rang_bottom_height"
+        android:backgroundTint="@color/storage_pie_mask"
         tools:src="@drawable/strorage_column_b_0"
         android:layout_gravity="bottom"/>
 </merge>
